# STD_KA

./: .gitignore  AnimationManager.cpp  AnimationManager.h  Animator.cpp  Animator.h  AssetManager.cpp  AssetManager.h  Bank.cpp  Bank.h  Button.cpp  Button.h  CMakeLists.txt  ChooseDialog.cpp  ChooseDialog.h  CoffeeChecker.cpp  CoffeeChecker.h  FuncWithDesc.h  Hoverable.h  IdCheck.cpp  KA_UI.h  LCDRowDisplay.cpp  LCDRowDisplay.h  MessageBar.cpp  MessageBar.h  NumKeyBoard.cpp  NumKeyBoard.h  README.md  TextButton.h  UserCursor.cpp  UserCursor.h  animationView.cpp  main.cpp  test.cpp
apps/: CMakeLists.txt
apps/STD_APP/: CMakeLists.txt  main.cpp
apps/animationView/: CMakeLists.txt  animationView.cpp
include/KA_UI/: Animator.h  Button.h  Hoverable.h  KA_UI.h  MessageBar.h  NumKeyBoard.h  SoundAnimationChain.h  Status.h
include/STD_APP/: Bank.h  CoffeeChecker.h
lib/: CMakeLists.txt
lib/KA_UI/: Animator.cpp  Button.cpp  CMakeLists.txt  MessageBar.cpp  NumKeyBoard.cpp  TextButton.cpp  UserCursor.cpp
media/: animations.json  coffee.json
